# pixelsparser

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/pixelsparser/: Pixel.py  __init__.py  utils.py
tests/: test_pixel.py  test_utils.py
tests/test_data/: test_diary.json
