[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelsparser"
version = "1.0.0"
authors = [{ name = "Constantinos Psomadakis", email = "business@tinosps.com" }]
description = "A python library that allows users to import their Pixels JSON data and use it in their python scripts."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pTinosq/pixelsparser/"
"Bug Tracker" = "https://github.com/pTinosq/pixelsparser/issues"
